--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="controls-row">
         <label for="tempoInput">BPM</label>
         <input id="tempoInput" type="number" value="60" />
-        <button onclick="togglePlay()">▶️ Play / Stop</button>
-        <button onclick="clearAll()">🧹 Clear All</button>
+        <button id="playButton">▶️ Play / Stop</button>
+        <button id="clearButton">🧹 Clear All</button>
       </div>
       <div class="volume-row">
         <label for="volumeControl">Volume</label>
