--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
     <div class="responsive-content">
       <div class="grid" id="grid"></div>
       <div class="library">
-        <img class="draggable" draggable="true" data-length="4" data-color="green" src="https://raw.githubusercontent.com/VisualMusicalMinds/Cartoon_Notation/refs/heads/main/Cartoon%20Rhythm0002.png" />
-        <img class="draggable" draggable="true" data-length="2" data-color="orange" src="https://raw.githubusercontent.com/VisualMusicalMinds/Cartoon_Notation/refs/heads/main/Cartoon%20Rhythm0004.png" />
-        <img class="draggable" draggable="true" data-length="1" data-color="purple" src="https://raw.githubusercontent.com/VisualMusicalMinds/Cartoon_Notation/refs/heads/main/Cartoon%20Rhythm0006.png" />
+        <img class="draggable" draggable="true" data-length="4" data-color="green" src="https://eagleviewmusic.com/images/Cartoon%20Rhythm0002.png" />
+        <img class="draggable" draggable="true" data-length="2" data-color="orange" src="https://eagleviewmusic.com/images/Cartoon%20Rhythm0004.png" />
+        <img class="draggable" draggable="true" data-length="1" data-color="purple" src="https://eagleviewmusic.com/images/Cartoon%20Rhythm0006.png" />
       </div>
-      <div class="controls-row">
-        <label for="tempoInput">BPM</label>
-        <input id="tempoInput" type="number" value="60" />
-        <button id="playButton">▶️ Play / Stop</button>
-        <button id="clearButton">🧹 Clear All</button>
-      </div>
+     <div class="controls-row">
+  <label for="tempoInput">BPM</label>
+  <input id="tempoInput" type="number" value="90" />
+  <input type="checkbox" id="tickMute" class="tick-mute-checkbox" checked>
+  <button id="playButton">▶️ Play / Stop</button>
+  <button id="clearButton">🧹 Clear All</button>
+</div>
       <div class="sound-mode-row">
         <label>
           <input type="radio" name="soundMode" value="drum" checked>
